extrapolation figures added
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@4318 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -189,11 +189,33 @@ Keeping only the important terms
 
 \> the concept of acceptance
 
+\fig{fig/pdf/elastic_acceptance.pdf}{elastic acceptance}{bla}
+
 \> the tree optics classes - high beta, medium beta, low beta
 \>> corresponding detector distances
 
+\fig{fig/pdf/hit_distribution.pdf}{hit distribution}{bla}
+
 \section{The total cross-section}
 
-\> plus (shortened) extrapolation studies
+\> Luminosity independent method
+\>> discuss the two amplitudes (spin averaged and spin preserving)
 
-%\input extrapolation
+\> plus (shortened) extrapolation studies at 14 TeV !
+
+\iffalse
+islam_bfkl, 9E-01, 3E-01, 2E-02, 1E-03, 3E-04
+ islam_cgc, 9E-01, 3E-01, 2E-02, 1E-03, 3E-04
+      ppp2, 6E-02, 4E-03, 1E-04, 3E-06, 1E-06
+      ppp3, 8E-01, 2E-01, 4E-03, 4E-03, 2E-03
+       bsw, 5E-01, 2E-01, 1E-03, 2E-04, 2E-04
+        bh, 2E+00, 3E-01, 7E-03, 3E-03, 2E-03
+      mean, 8E-01, 2E-01, 8E-03, 1E-03, 8E-04
+\fi
+
+\bmfig
+\fig{fig/pdf/ext_B.pdf}{ext B}{[7cm]bla}
+\fig{fig/pdf/ext_C.pdf}{ext C}{[7cm]bla}
+\emfig
+
+\fig{fig/pdf/ext_results.pdf}{ext results}{bla}
