--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -58,11 +58,11 @@
 
 \BeginText
 
-%\input introduction.tex
-%\input elastic.tex
+\input introduction.tex
+\input elastic.tex
 \input totem.tex
 \input simu_reco.tex
-%\input alignment.tex
+\input alignment.tex
 \input first_el_measurement.tex
 
 \appendices
